@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020160910"
-#define public MagickPackageReleaseDate "snapshot-20160910"
+#define public MagickPackageVersionAddendum ".020160911"
+#define public MagickPackageReleaseDate "snapshot-20160911"
